clusters/apps/env/production/home/hajimari/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hajimari-crj
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: start.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`start.${SECRET_DOMAIN}`)"
      services:
        - name: hajimari
          port: 3000
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: start.${SECRET_DOMAIN}
